# conch

./: .gitignore  LICENSE  LLM_ASSISTED_SHELL_SPEC.md  README.md  config.example  install.ps1  install.sh  mcp.example.json  pyproject.toml
.github/workflows/: ci.yml
conch/: __init__.py  agent.py  app.py  browser.py  chat.py  cli.py  commands.py  composio.py  config.py  conversations.py  llm.py  mcp.py  memory.py  prompts.py  providers.py  public_apis.py  render.py  runtime.py  scheduler.py  slack.py  tooling.py
shell/: conch.bash  conch.zsh
tests/: test_agent.py  test_conversations.py  test_public_apis.py  test_render.py  test_runtime.py  test_scheduler.py  test_tooling.py
