[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "conch"
version = "0.2.0"
description = "LLM-assisted shell with chat, MCP tools, memory, and scheduling."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pygments>=2.0",
]
dependencies = [
    "pygments>=2.0",
]

[project.scripts]
conch = "conch.app:main"
conch-chat = "conch.app:main"
conch-ask = "conch.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["conch*"]
